--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "abhi-demo",
+  "name": "commercetool-jwellery-poc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "abhi-demo": "file:",
+    "commercetool-jwellery-poc": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
